--- a/Minu/Minu.csproj
+++ b/Minu/Minu.csproj
@@ -91,6 +91,10 @@
       <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Nancy.Authentication.Forms, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nancy.Authentication.Forms.1.4.1\lib\net40\Nancy.Authentication.Forms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Nancy.Hosting.Aspnet">
       <HintPath>..\packages\Nancy.Hosting.Aspnet.1.4.1\lib\net40\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
@@ -155,6 +159,7 @@
     <Compile Include="CustomBootstrapper.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\BlogPost.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="SQLiteHelper.cs" />
     <Compile Include="Models\HomePage.cs" />
     <Compile Include="Modules\AdminModule.cs" />
