--- a/Minu/packages.config
+++ b/Minu/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net40" />
+  <package id="Nancy.Authentication.Forms" version="1.4.1" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" requireReinstallation="true" />
   <package id="Nancy.Viewengines.Razor" version="1.4.3" targetFramework="net40" />
   <package id="System.Data.SQLite" version="1.0.103" targetFramework="net461" />
