--- a/Minu/packages.config
+++ b/Minu/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.ApplicationInsights.Web" version="1.2.3" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="1.2.3" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="1.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
