--- a/Minu/packages.config
+++ b/Minu/packages.config
@@ -13,12 +13,12 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.4.2" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.4.2" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.4.2" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net40" />
   <package id="Nancy.Authentication.Forms" version="1.4.1" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" requireReinstallation="true" />
   <package id="Nancy.Viewengines.Razor" version="1.4.3" targetFramework="net40" />
-  <package id="System.Data.SQLite" version="1.0.103" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net461" />
-  <package id="System.Data.SQLite.EF6" version="1.0.103" targetFramework="net461" />
-  <package id="System.Data.SQLite.Linq" version="1.0.103" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
